# llm-reliability-platform

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pytest.ini
LLM-REALIABILITY-PLATFORM/platform/: .python-version  Dockerfile  pyproject.toml
LLM-REALIABILITY-PLATFORM/platform/src/reliability_platform/: __init__.py  config.py  main.py
LLM-REALIABILITY-PLATFORM/platform/src/reliability_platform/adapters/api/: app.py  dependencies.py  middleware.py
LLM-REALIABILITY-PLATFORM/platform/src/reliability_platform/application/dto/: capture_dto.py
LLM-REALIABILITY-PLATFORM/platform/src/reliability_platform/domain/invariants/: __init__.py  base.py  registry.py
LLM-REALIABILITY-PLATFORM/platform/src/reliability_platform/domain/models/: __init__.py  capture.py  cost.py  drift.py  invariant.py  validation.py
LLM-REALIABILITY-PLATFORM/platform/src/reliability_platform/infrastructure/llm/: embeddings.py
LLM-REALIABILITY-PLATFORM/platform/src/reliability_platform/utils/: async_helpers.py  datetime_utils.py  result.py  text_processing.py
LLM-REALIABILITY-PLATFORM/platform/src/reliability_platform/workers/: drift_worker.py  validation_worker.py
LLM-REALIABILITY-PLATFORM/platform/tests/unit/domain/: test_capture_models.py  test_cost_models.py  test_drift_models.py  test_validation_models.py
LLM-REALIABILITY-PLATFORM/sdk/python/: pyproject.toml
LLM-REALIABILITY-PLATFORM/sdk/python/llm_reliability_sdk/: __init__.py  client.py  config.py  version.py
LLM-REALIABILITY-PLATFORM/sdk/python/llm_reliability_sdk/capture/: buffer.py
LLM-REALIABILITY-PLATFORM/sdk/python/llm_reliability_sdk/sampling/: __init__.py  strategies.py
LLM-REALIABILITY-PLATFORM/sdk/python/llm_reliability_sdk/transport/: __init__.py  http.py
(+32 files in other folders)
