 [tool.poetry]
 name = "reliability-platform"
 version = "0.1.0"
 description = "LLM Production Reliability Platform"
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 packages = [{ include = "reliability_platform", from = "src" }]

 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.110.0"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
 pydantic = "^2.5.0"
 pydantic-settings = "^2.0.3"
 aiokafka = "^0.10.0"
 structlog = "^23.2.0"
 SQLAlchemy = "^2.0.23"
 asyncpg = "^0.29.0"
 redis = "^5.0.1"
 qdrant-client = "^1.7.0"
 numpy = "^1.26.0"
 scipy = "^1.11.3"
 httpx = "^0.25.0"
 prometheus-client = "^0.19.0"

 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 pytest-asyncio = "^0.23.2"
 ruff = "^0.1.7"
 mypy = "^1.7.0"
 coverage = "^7.3.2"

 [tool.ruff]
 line-length = 100

 [tool.mypy]
 python_version = "3.11"
 strict = true
 ignore_missing_imports = true
 warn_unused_ignores = true
 warn_redundant_casts = true
 warn_unused_configs = true
 no_implicit_optional = true

 [build-system]
 requires = ["poetry-core>=1.7.0"]
 build-backend = "poetry.core.masonry.api"

