 [tool.poetry]
 name = "llm-reliability-sdk"
 version = "0.1.0"
 description = "Python SDK for LLM Reliability Platform"
 authors = ["Mohammad Atashi <mohammad.atashi@example.com>"]
 packages = [{ include = "llm_reliability_sdk" }]

 [tool.poetry.dependencies]
 python = "^3.11"
 httpx = "^0.25.0"
 pydantic = "^2.5.0"

 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.7"
 mypy = "^1.7.0"
 pytest = "^7.4.0"

 [build-system]
 requires = ["poetry-core>=1.7.0"]
 build-backend = "poetry.core.masonry.api"

